@@ -332,6 +332,22 @@ task testWithFaultInjection(type: Test) {
     }
 }
 
+task testWithFaultInjectionShouldFails(type: Test) {
+    useJUnitPlatform()
+
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
+
+    systemProperty "filibuster.enabled", "TRUE"
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.shouldFails.*')
+    }
+}
+
 task testWithFaultInjectionPython(type: Test) {
     useJUnitPlatform()
 
